# template-python

./: .appveyor.yml  .coveragerc  .gitattributes  .gitignore  .project  .pydevproject  .pylintrc  .python-version  .scrutinizer.yml  .sublime-project  .tool-versions  .travis.yml  .verchew.ini  CHANGES.md  CHANGES.txt  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  cookiecutter.json  pyproject.toml  requirements.txt  scent.py  setup.cfg  setup.py  template-python.sublime-project  wercker.yml
.config/: .noserc
.github/workflows/: main.yml
docs/: .gitignore
foobar/: __init__.py  main.py
foobar/test/: __init__.py  test_foobar.py  test_main.py
{{cookiecutter.project_name}}/: .appveyor.yml  .coveragerc  .gitattributes  .gitignore  .isort.cfg  .mypy.ini  .noserc  .pep257  .pep8rc  .project  .pycodestylerc  .pydevproject  .pylint.ini  .pylintrc  .pyup.yml  .scrutinizer.yml  .tool-versions  .travis.yml  .verchew  .verchew.ini  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  circle.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  scent.py  setup.py  {{cookiecutter.project_name}}.sublime-project
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/docs/: advanced.md  index.md
{{cookiecutter.project_name}}/notebooks/profile_default/: ipython_config.py
{{cookiecutter.project_name}}/requirements/: ci.txt  dev.txt
{{cookiecutter.project_name}}/tests/: __init__.py  conftest.py  test_all.py  test_cli.py  test_cli_nose.py  test_cli_pytest.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py  gui.py  sample.py  utils.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/test/: __init__.py  conftest.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/tests/: __init__.py  conftest.py  test_utils.py  test_utils_pytest.py  test_{{cookiecutter.package_name}}.py
