[tool.poetry]

name = "template-python"
version = "1.0"
description = "A template for new Python libraries."
authors = ["Jace Browning <jacebrowning@gmail.com>"]

[tool.poetry.dependencies]

python = "^3.8"

cookiecutter = "^1.7.3"

black = "^23.1"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
